add Manuel description

--- a/content/author/manuel-knopf.jade
+++ b/content/author/manuel-knopf.jade
@@ -5,4 +5,4 @@ author: Manuel Knopf
 layout: blog.jade
 ---
 
-p Manuel Knopf ist Agile Innovation Consultant bei Finnoconsult.
+p Manuel Knopf ist Agile Innovation Consultant bei Finnoconsult. Seit 2018 bringt er die im FinTech-Sektor gesammelte Expertise im Schweizer Umfeld ein.
