add back beyond banking blog entry

--- a/content/author/guillaume-vaslin-reimann.jade
+++ b/content/author/guillaume-vaslin-reimann.jade
@@ -5,4 +5,4 @@ author: Guillaume Vaslin-Reimann
 layout: blog.jade
 ---
 
-p Guillaume Vaslin ist Design & Innovation Consultant bei Finnoconsult. Er begleitet Start-Ups und Konzerne weltweit bei der Konzeption, UX/UI und Launch von digitalen Produkte.
+p Guillaume Vaslin ist Design & Innovation Consultant bei Finnoconsult. Er begleitet Start-Ups und Konzerne weltweit bei der Konzeption, UX/UI und Launch von digitalen Produkten.
