add desc for maria

--- a/content/author/maria-rauch.jade
+++ b/content/author/maria-rauch.jade
@@ -5,4 +5,5 @@ author: Maria Rauch
 layout: blog.jade
 ---
 
-p Maria Rauch
+p Maria Rauch ist Scrum Master und Agile Consultant bei FinnoConsult. Sie unterstützt seit 15 Jahren bei der Entwicklung von innovativen Webanwendungen und Apps für unterschiedliche Branchen und Zielgruppen.
+
